@@ -1,3 +1,8 @@
+2008-04-19  Stefan Kost  <ensonic@users.sf.net>
+
+	* src/BuzzMachineLoader/Makefile.am:
+	  Change LDFLAGS to LIBADD and add -lstdc++.
+
 2008-04-16  Stefan Kost  <ensonic@users.sf.net>
 
 	* Makefile.am:
